# msc_cybersecurity_project

./: .env.example  .gitignore  pyproject.toml
notebooks/reports/: project_experiment_report.py  project_experiment_report_backup.py  project_experiment_report_final.py
src/knowledge_distillation_ensemble/config/: settings.py
src/knowledge_distillation_ensemble/ml/data/: __init__.py  analysis_builder.py  convert_data.py  dataset_analyzer.py  extract_data.py  feature_harmonizer.py  feature_mappings.py  harmonize_datasets.py  label_harmonizer.py  train_test_split.py
src/knowledge_distillation_ensemble/ml/evaluation/: visualizations.py
src/knowledge_distillation_ensemble/ml/training/: __init__.py  benchmark_model.py  student_model.py  teacher_model.py  train_test_split.py  training_pipeline.py
src/ml/evaluation/: dataset_analyzer.py
src/utils/: reporting.py
