[project]
name = "msc-cybersecurity-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.0",
    "kagglehub>=0.3.13",
    "marimo>=0.16.2",
    "polars>=1.33.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.11.0",
    "pytorch-lightning>=2.5.5",
    "scikit-learn>=1.7.2",
    "sqlglot>=27.19.0",
]

[dependency-groups]
dev = [
    "aider-install>=0.2.0",
]
